manifests/oncall/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncall
  labels:
    app.kubernetes.io/name: oncall
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oncall
      app.kubernetes.io/component: web
  template:
    metadata:
      annotations:
        sage/group: "ab2_islamov"
      labels:
        app.kubernetes.io/name: oncall
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: oncall
          image: knucksie/sre-ab-oncall:0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 8888
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: oncall-config
              mountPath: /home/oncall/config/config.yaml
              subPath: oncall.conf
              readOnly: true
        - name: json-log-sidecar
          image: busybox:1.36
          command: ["/bin/sh","-lc"]
          args:
            - |
              while true; do
                TS=$(date -u +%FT%TZ)
                HOST=$(hostname)
                printf '{"env":"st","system":"oncall","inst":"%s","level":"INFO","message":"sidecar heartbeat"}\n' "$HOST"
                sleep 5
              done
          resources:
            requests: { cpu: "5m", memory: "16Mi" }
            limits:   { cpu: "50m", memory: "32Mi" }
            
      volumes:
        - name: oncall-config
          configMap:
            name: oncall
