manifests/oncall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oncall
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8888"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oncall
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
